# opentelemetry-rust-custom

./: Cargo.toml
examples/: README.md
examples/backward-compatibility/: Cargo.toml  README.md
examples/backward-compatibility/src/: main.rs
opentelemetry-sdk/src/trace/: config.rs  tracer.rs
opentelemetry-sdk/src/trace/id_generator/: aws.rs  mod.rs
