[package]
name = "backward-compatibility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry-http = { version =  "0.6.0" }
hyper = "0.14.26"
rand = "0.8.5"

opentelemetry = { path = "../../opentelemetry", features =  ["rt-tokio", "trace"] }
opentelemetry_sdk = { path = "../../opentelemetry-sdk" }
opentelemetry-otlp = { path = "../../opentelemetry-otlp" }
opentelemetry-semantic-conventions = { path = "../../opentelemetry-semantic-conventions" }